# saavn-web-yew

./: Cargo.toml  flake.nix  package-lock.json  tailwind.config.js  tailwind.css
src/: card.rs  main.rs
