[package]
name = "saavn-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew="0.19"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
stylist = "0.11.0"

